# poste_inteligente_v6

./: CMakeLists.txt  huge_app.csv  main.rar  platformio.ini  sdkconfig  sdkconfig.esp32dev
.claude/: settings.json  settings.local.json
components/Simulador HTM/: simulador_postes.html
components/comm_manager/: CMakeLists.txt  CMakelists.txt  README.txt  comm_manager.c  comm_manager.h
components/config/: CMakeLists.txt  hw_config.h  post_config.c  post_config.h  readme.txt  system_config.h
components/dali_manager/: CMakeLists.txt  README.txt  dali_manager.c  dali_manager.h
components/display_driver/: CMakeLists.txt  README.txt  st7789.c  st7789.h
components/display_manager/: CMakeLists.txt  README.txt  display_manager.c  display_manager.h  font16x16.h
components/display_manager/assets/: wifi_icon.c  wifi_icon.h  wifi_off.c  wifi_off.h  wifi_on.c  wifi_on.h
components/lvgl/: lv_conf.h  lvgl.h
components/lvgl/env_support/cmake/: esp.cmake
components/lvgl/src/font/: lv_font_montserrat_48.c
components/lvgl_port/: CMakeLists.txt  lv_port_disp.c  lv_port_disp.h
components/radar_manager/: CMakeLists.txt  radar_manager.c  radar_manager.h  readme.txt
components/state_machine/: CMakeLists.txt  README.txt  state_machine.c  state_machine.h
components/udp_manager/: CMakeLists.txt  ewadme.txt  readme.txt  udp_manager.c  udp_manager.h
components/wifi_manager/: CMakeLists.txt  README.txt  wifi_manager.c  wifi_manager.h
main/: CMakeLists.txt  main.c  readme.txt
